--- a/dimensionality_reducer.yaml
+++ b/dimensionality_reducer.yaml
@@ -15,7 +15,7 @@ inputs:
     default: '{}'
 
 outputs:
-  - name: output_data
+  - name: data
     type: Data
     description: 'Reduced dataset with component features (CSV format)'
   - name: reducer
@@ -562,9 +562,10 @@ implementation:
       - {inputValue: method}
       - --method_params
       - {inputValue: method_params}
-      - --output_output_data
-      - {outputPath: output_data}
+      - --output_data
+      - {outputPath: data}
       - --output_reducer
       - {outputPath: reducer}
       - --output_metadata
       - {outputPath: metadata}
+
