--- a/missing_values_handler.yaml
+++ b/missing_values_handler.yaml
@@ -54,7 +54,7 @@ implementation:
         
         
         def ensure_directory_exists(file_path):
-            #Create directory if it doesn't exist#
+            # Create directory if it doesn't exist
             directory = os.path.dirname(file_path)
             if directory and not os.path.exists(directory):
                 os.makedirs(directory, exist_ok=True)
@@ -62,7 +62,7 @@ implementation:
         
         
         def load_data(input_path):
-            #Load data from CSV or Parquet file#
+            # Load data from CSV or Parquet file
             logger.info(f"Loading dataset from: {input_path}")
             
             ext = Path(input_path).suffix.lower()
@@ -84,13 +84,8 @@ implementation:
         
         
         def analyze_missing_patterns(df):
-            #
-            Analyze missing value patterns in dataset
-            
-            Returns:
-            --------
-            dict : Missing value statistics
-            #
+            # Analyze missing value patterns in dataset
+            # Returns: dict with missing value statistics
             logger.info("="*80)
             logger.info("ANALYZING MISSING VALUE PATTERNS")
             logger.info("="*80)
@@ -134,28 +129,9 @@ implementation:
         
         
         def handle_missing_values(df, method, method_params):
-            #
-            Handle missing values using specified strategy
-            
-            Parameters:
-            -----------
-            df : pd.DataFrame
-                Input dataset
-            method : str
-                Strategy: 'drop_rows', 'drop_cols', 'mean', 'median', 'mode', 
-                          'constant', 'knn', 'iterative', 'forward_fill', 'backward_fill'
-            method_params : dict
-                Method-specific parameters
-            
-            Returns:
-            --------
-            df_imputed : pd.DataFrame
-                Dataset with missing values handled
-            imputer : object or None
-                Fitted imputer object
-            stats : dict
-                Imputation statistics
-            #
+            # Handle missing values using specified strategy
+            # Parameters: df, method, method_params
+            # Returns: df_imputed, imputer object, stats dict
             logger.info("="*80)
             logger.info("HANDLING MISSING VALUES")
             logger.info("="*80)
@@ -372,7 +348,7 @@ implementation:
                                help="Missing value handling method")
             parser.add_argument("--method_params", type=str, default='{}',
                                help="Method-specific parameters as JSON string")
-            parser.add_argument("--output_output_data", required=True,
+            parser.add_argument("--output_data", required=True,
                                help="Output path for imputed dataset")
             parser.add_argument("--output_imputer", required=True,
                                help="Output path for fitted imputer")
@@ -390,7 +366,7 @@ implementation:
             
             try:
                 # Ensure output directories
-                ensure_directory_exists(args.output_output_data)
+                ensure_directory_exists(args.output_data)
                 ensure_directory_exists(args.output_imputer)
                 ensure_directory_exists(args.output_report)
                 
@@ -423,7 +399,7 @@ implementation:
                     logger.info("="*80)
                     
                     # Save original data
-                    df.to_csv(args.output_output_data, index=False)
+                    df.to_csv(args.output_data, index=False)
                     
                     # Save empty imputer
                     with open(args.output_imputer, 'wb') as f:
@@ -466,8 +442,8 @@ implementation:
                     logger.warning("="*80)
                 
                 # Save imputed data
-                df_imputed.to_csv(args.output_output_data, index=False)
-                logger.info(f"Imputed data saved: {args.output_output_data}")
+                df_imputed.to_csv(args.output_data, index=False)
+                logger.info(f"Imputed data saved: {args.output_data}")
                 
                 # Save imputer
                 with open(args.output_imputer, 'wb') as f:
@@ -529,5 +505,3 @@ implementation:
       - {outputPath: imputer}
       - --output_report
       - {outputPath: report}
-
-
